# pattern-matching

./: CMakeLists.txt  README.md  main.cpp  tests.cpp
cpu/: cpu_finder.cpp  cpu_finder.h
gpu/: gpu_finder.cpp  gpu_finder.h  match.cl
gpu/Matrix/: Buf.h  Matrix.h
tests/: test100000.txt  testbig2.txt
